Implemented logic for shorturl generation

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,21 +1,14 @@
 
 
-$primary-color:#FE735B;
-
-
-
 *{
     margin: 0;
     padding: 0;
 }
 
-
-button{
-    background-color: $primary-color;
-    width: 30%;
-    padding: 1.2rem 1rem;
-    border: none;
-    border-radius: 1rem;
-    color: white;
-    font-weight: bolder;
+.page__sub__heading{
+    display: flex;
+    justify-content: center;
+    padding: 1rem;
+    color: #FE735B;
+    gap: 0.5rem;
 }
