--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -9,7 +9,7 @@
     align-items: center;
     justify-content: space-between;
     border: 1px solid;
-    padding: 0.5rem
+    padding: 0.5rem;
 }
 
 
