--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -12,3 +12,136 @@
     color: #FE735B;
     gap: 0.5rem;
 }
+
+
+
+@import '../styles/global';
+
+.container{
+    background-color: #F5F6F7;
+    // height: 100vh;
+}
+
+
+.linkBox{
+    display: block;
+    margin: auto;
+    background-color: white;
+    width: 50%;
+    padding: 1rem;
+
+    label{
+        display: block;
+    }
+
+    
+    .urlBox{
+        display: flex;
+        border-radius: 0.2rem;
+        border: 1px solid black;
+    }
+
+    input{
+        padding: 1rem;
+        width:80%;
+        border: none;
+    }
+
+
+    button{
+        @include buttonStyle();
+        width: 20%;
+        padding: 1rem;
+    }
+
+}
+
+.displayBox{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+    border: 2px solid;
+
+
+    .leftSection{
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        // border: 2px solid;
+        width: 80%;
+        padding: 1rem;
+        span{
+            display: flex;
+            align-items: center;
+        }
+    
+        a{
+            text-decoration: none;
+            margin-right: 0.5rem;
+        }
+        .btnContainer{
+            display: flex;
+            gap: 1rem;
+            button{
+                width: 50%;
+            }
+        }
+
+        .socialLinks{
+            display: flex;
+            gap: 0.5rem;
+            button{
+                width: unset;
+            }
+        }
+
+       
+    }
+
+    .rightSection{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+        // border: 2px solid;
+        padding: 1rem;
+
+        button{
+
+            width: 200px;
+        }
+    }
+    
+}
+
+.CounterBox{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    margin: auto;
+    height: 300px;
+    // border: 1px solid;
+    box-shadow: 0.1rem 0.1rem rgb(179, 176, 176),-0.1rem -0.1rem rgb(179, 176, 176);
+
+
+    h1{
+        font-size: 10rem;
+        color: #FE735B;
+    }
+    
+}
+
+.analyticsBox{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+
+    h3{
+        display: flex;
+        align-items: center;
+    }
+
+    a{
+        color: blue;
+    }
+}
