added some styles

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -6,10 +6,12 @@
 
 .navbar{
     display: flex;
+    position: relative;
     align-items: center;
     justify-content: space-between;
     border: 1px solid;
     padding: 0.5rem;
+    z-index: 3;
 }
 
 
