--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,7 +3,10 @@
 *{
     margin: 0;
     padding: 0;
+    z-index: 2;
 }
+
+
 
 .page__sub__heading{
     display: flex;
@@ -18,8 +21,11 @@
 @import '../styles/global';
 
 .container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
     background-color: #F5F6F7;
-    // height: 100vh;
+    height: 74.1vh;
 }
 
 
@@ -60,14 +66,13 @@
     display: flex;
     align-items: center;
     gap: 0.5rem;
-    border: 2px solid;
+    border: 1px solid;
 
 
     .leftSection{
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        // border: 2px solid;
         width: 80%;
         padding: 1rem;
         span{
