--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -25,7 +25,6 @@
     justify-content: center;
     align-items: center;
     background-color: #F5F6F7;
-    height: 74.1vh;
 }
 
 
@@ -125,7 +124,6 @@
     width: 50%;
     margin: auto;
     height: 300px;
-    // border: 1px solid;
     box-shadow: 0.1rem 0.1rem rgb(179, 176, 176),-0.1rem -0.1rem rgb(179, 176, 176);
 
 
@@ -148,5 +146,7 @@
 
     a{
         color: blue;
+        word-wrap: break-word;
     }
+
 }
