--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,152 +1,134 @@
-
-
-*{
-    margin: 0;
-    padding: 0;
-    z-index: 2;
+* {
+  margin: 0;
+  padding: 0;
 }
 
-
-
-.page__sub__heading{
-    display: flex;
-    justify-content: center;
-    padding: 1rem;
-    color: #FE735B;
-    gap: 0.5rem;
+.page__sub__heading {
+  display: flex;
+  justify-content: center;
+  padding: 1rem;
+  color: #fe735b;
+  gap: 0.5rem;
 }
 
+@import "../styles/global";
 
-
-@import '../styles/global';
-
-.container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: #F5F6F7;
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f6f7;
 }
 
+.linkBox {
+  display: block;
+  margin: auto;
+  background-color: white;
+  width: 50%;
+  padding: 1rem;
 
-.linkBox{
+  label {
     display: block;
-    margin: auto;
-    background-color: white;
-    width: 50%;
+  }
+
+  .urlBox {
+    display: flex;
+    border-radius: 0.2rem;
+    border: 1px solid black;
+  }
+
+  input {
     padding: 1rem;
+    width: 80%;
+    border: none;
+  }
 
-    label{
-        display: block;
-    }
-
-    
-    .urlBox{
-        display: flex;
-        border-radius: 0.2rem;
-        border: 1px solid black;
-    }
-
-    input{
-        padding: 1rem;
-        width:80%;
-        border: none;
-    }
-
-
-    button{
-        @include buttonStyle();
-        width: 20%;
-        padding: 1rem;
-    }
-
+  button {
+    @include buttonStyle();
+    width: 20%;
+    padding: 1rem;
+  }
 }
 
-.displayBox{
-    display: flex;
-    align-items: center;
-    gap: 0.5rem;
-    border: 1px solid;
+.displayBox {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  border: 1px solid;
 
-
-    .leftSection{
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        width: 80%;
-        padding: 1rem;
-        span{
-            display: flex;
-            align-items: center;
-        }
-    
-        a{
-            text-decoration: none;
-            margin-right: 0.5rem;
-        }
-        .btnContainer{
-            display: flex;
-            gap: 1rem;
-            button{
-                width: 50%;
-            }
-        }
-
-        .socialLinks{
-            display: flex;
-            gap: 0.5rem;
-            button{
-                width: unset;
-            }
-        }
-
-       
-    }
-
-    .rightSection{
-        display: flex;
-        align-items: center;
-        flex-direction: column;
-        // border: 2px solid;
-        padding: 1rem;
-
-        button{
-
-            width: 200px;
-        }
-    }
-    
-}
-
-.CounterBox{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 50%;
-    margin: auto;
-    height: 300px;
-    box-shadow: 0.1rem 0.1rem rgb(179, 176, 176),-0.1rem -0.1rem rgb(179, 176, 176);
-
-
-    h1{
-        font-size: 10rem;
-        color: #FE735B;
-    }
-    
-}
-
-.analyticsBox{
+  .leftSection {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-
-    h3{
-        display: flex;
-        align-items: center;
+    width: 80%;
+    padding: 1rem;
+    span {
+      display: flex;
+      align-items: center;
     }
 
-    a{
-        color: blue;
-        word-wrap: break-word;
+    a {
+      text-decoration: none;
+      margin-right: 0.5rem;
+    }
+    .btnContainer {
+      display: flex;
+      gap: 1rem;
+      button {
+        width: 50%;
+      }
     }
 
+    .socialLinks {
+      display: flex;
+      gap: 0.5rem;
+      button {
+        width: unset;
+      }
+    }
+  }
+
+  .rightSection {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    // border: 2px solid;
+    padding: 1rem;
+
+    button {
+      width: 200px;
+    }
+  }
+}
+
+.CounterBox {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  margin: auto;
+  height: 300px;
+  box-shadow: 0.1rem 0.1rem rgb(179, 176, 176),
+    -0.1rem -0.1rem rgb(179, 176, 176);
+
+  h1 {
+    font-size: 10rem;
+    color: #fe735b;
+  }
+}
+
+.analyticsBox {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  h3 {
+    display: flex;
+    align-items: center;
+  }
+
+  a {
+    color: blue;
+    word-wrap: break-word;
+  }
 }
